--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 @media not all and (orientation:landscape){
   body{
     background-image: url('img2.jpg');
+    background-size: cover;
   }
   .calculator{
     max-width: 275px;
