--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 /* FOR MOBILE */
 @media not all and (orientation:landscape){
   body{
-    background-image: url('img2.jpg');
+    background-image: url('img2.jpeg');
     background-size: cover;
   }
   .calculator{
@@ -37,7 +37,7 @@ body {
 /* FOR DESKTOP */
 @media not all and (orientation:portrait){
   body{
-    background-image: url('img1.jpg');
+    background-image: url('img1.jpeg');
   }
   footer {
     background:transparent;
